# mitype

./: .buildinfo  .gitattributes  .gitignore  .pre-commit-config.yaml  BUILD.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.txt  MANIFEST.in  README  README.md  README.rst  SampleTextFile  api.html  backspace_test.py  cleanup.sh  genindex.html  includeme.html  index.html  installation.html  local_test.py  mitype.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  requirements-dev.txt  search.html  searchindex.js  setup.cfg  setup.py  tox.ini  usage.html  versioneer.py
.github/: FUNDING.yml  config.yml  issue_template.md  pull_request.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto_author_assign.yml  ci.yml  codeql-analysis.yml  update_docs.yml
_modules/: index.html
_modules/mitype/: app.html  calculations.html  commandline.html  database.html  history.html  keycheck.html  signals.html  timer.html
_sources/: index.rst.txt  mitype.rst.txt  modules.rst.txt  usage.rst.txt
_static/: documentation_options.js
docs/: Makefile  README.md
docs/source/: api.rst  conf.py  index.rst  installation.rst  usage.rst
mitype/: __init__.py  __main__.py  __main__.pyw  _version.py  app.py  calculations.py  calculations.pyw  commandline.py  data.db  database.py  history.json  history.py  keycheck.py  local_test.py  signals.py  timer.py
testing/: debug-attach  debug-mitype
tests/: conftest.py  test_history.py  test_typing.py
