[project]
keywords=["MITYPE", "TERMINAL", "WPM", "SPEED", "TYPE"]
long_description="README.md"
long_description_content_type="text/markdown"
install_requires=["windows-curses; platform_system=='Windows'"]
extras_require={"dev"= ["pytest"]}
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Environment :: Console",
    "Natural Language :: English",
    "Topic :: Terminals",
    "Topic :: Games/Entertainment",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only"
]
package_data={"mitype"= ["data.db"]}
entry_points={"console_scripts"= ["mitype=mitype.app:App"]}
include_package_data="True"
zip_safe="False"


[build-system]
requires = [
    "setuptools >= 51.0.0",
    "wheel",
    "windows-curses; platform_system=='Windows'"
]
build-backend = "setuptools.build_meta"
