[metadata]
name = mitype
license = GPL
description = A command line tool to improve typing speed
author = MITHIL POOJARY
author_email = mithil467@gmail.com
url = https://github.com/mithil467/mitype

# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer install' after changing this section, and commit the
# resulting files.
[versioneer]
VCS = git
style = pep440
tag_prefix = v
versionfile_source = mitype/_version.py
versionfile_build = mitype/_version.py
parentdir_prefix = mitype-
