[metadata]
name = mitype
license = GPL
description = A command line tool to improve typing speed
author = MITHIL POOJARY
author_email = mithil467@gmail.com
url = https://github.com/mithil467/mitype
keywords = MITYPE, TERMINAL, WPM, SPEED, TYPE
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Environment :: Console
    Natural Language :: English
    Topic :: Terminals
    Topic :: Games/Entertainment
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only

[options]
packages = mitype
install_requires =
    windows-curses; platform_system=='Windows'
include_package_data = True
zip_safe = False

[options.package_data]
mitype = data.db

[options.extras_require]
dev = pytest

[options.entry_points]
console_scripts =
    mitype=mitype.app:App


# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer install' after changing this section, and commit the
# resulting files.
[versioneer]
VCS = git
style = pep440
tag_prefix = v
versionfile_source = mitype/_version.py
versionfile_build = mitype/_version.py
parentdir_prefix = mitype-
